log
Thu 25 Apr 2024 04:16:28 PM UTC: 
 hashmap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:4:
hashmap.c:55:1: error: expected identifier or ‘(’ before ‘}’ token
   55 | }
      | ^
hashmap.c: In function ‘enlarge’:
hashmap.c:62:29: error: too few arguments to function ‘calloc’
   62 |     map->buckets = (Pair **)calloc(map->capacity * sizeof(Pair*));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:4:
hashmap.c: At top level:
hashmap.c:75:5: error: data definition has no type or storage class [-Werror]
   75 |     enlarge_called = 1; //no borrar (testing purposes)
      |     ^~~~~~~~~~~~~~
hashmap.c:75:5: error: type defaults to ‘int’ in declaration of ‘enlarge_called’ [-Werror=implicit-int]
hashmap.c:75:5: error: redefinition of ‘enlarge_called’
hashmap.c:10:5: note: previous definition of ‘enlarge_called’ with type ‘int’
   10 | int enlarge_called=0;
      |     ^~~~~~~~~~~~~~
hashmap.c:78:1: error: expected identifier or ‘(’ before ‘}’ token
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3b1f717
Thu 25 Apr 2024 04:17:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:55:1: error: expected identifier or ‘(’ before ‘}’ token
   55 | }
      | ^
hashmap.c: In function ‘enlarge’:
hashmap.c:62:29: error: too few arguments to function ‘calloc’
   62 |     map->buckets = (Pair **)calloc(map->capacity * sizeof(Pair*));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:4:
hashmap.c: At top level:
hashmap.c:75:5: error: data definition has no type or storage class [-Werror]
   75 |     free(old_array); //no borrar (testing purposes)
      |     ^~~~
hashmap.c:75:5: error: type defaults to ‘int’ in declaration of ‘free’ [-Werror=implicit-int]
hashmap.c:75:5: error: parameter names (without types) in function declaration [-Werror]
hashmap.c:75:5: error: conflicting types for ‘free’; have ‘int()’
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:555:13: note: previous declaration of ‘free’ with type ‘void(void *)’
  555 | extern void free (void *__ptr) __THROW;
      |             ^~~~
In file included from test.c:4:
hashmap.c:78:1: error: expected identifier or ‘(’ before ‘}’ token
   78 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d554d53
Thu 25 Apr 2024 04:17:25 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c:55:1: error: expected identifier or ‘(’ before ‘}’ token
   55 | }
      | ^
hashmap.c: In function ‘enlarge’:
hashmap.c:62:29: error: too few arguments to function ‘calloc’
   62 |     map->buckets = (Pair **)calloc(map->capacity * sizeof(Pair*));
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
6d434ef
Thu 25 Apr 2024 04:18:06 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:55:1: error: expected identifier or ‘(’ before ‘}’ token
   55 | }
      | ^
Compilation failed
a0dc446
Thu 25 Apr 2024 04:18:14 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
905c7db
Sat 27 Apr 2024 06:46:33 AM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
b52b6d5
Sat 27 Apr 2024 06:51:11 AM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 30/70
712e80b
Sat 27 Apr 2024 06:54:46 AM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
dd1f50e
Sat 27 Apr 2024 06:55:27 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 30/70
31f7b47
Sat 27 Apr 2024 06:56:47 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
fe402ee
Sat 27 Apr 2024 07:03:43 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
8e9e081
Sat 27 Apr 2024 07:09:55 AM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
8d711f2
Sat 27 Apr 2024 07:10:31 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
6e616aa
Sat 27 Apr 2024 07:12:43 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 30/70
aca1782
Sat 27 Apr 2024 07:14:30 AM UTC: 
 hashmap.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  6|3
total_score: 40/70
78027a6
Sat 27 Apr 2024 07:18:21 AM UTC: 
 hashmap.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:86:43: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   86 |    if (map == NULL || key == NULL) return NULL;
      |                                           ^~~~
hashmap.c:85:6: note: declared here
   85 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f4489ef
Mon 29 Apr 2024 12:10:42 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:86:43: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   86 |    if (map == NULL || key == NULL) return NULL;
      |                                           ^~~~
hashmap.c:85:6: note: declared here
   85 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
25fba50
Mon 29 Apr 2024 12:11:51 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
f810a50
Mon 29 Apr 2024 12:26:27 AM UTC: 
 hashmap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 50/70
fd77c10
Mon 29 Apr 2024 02:54:02 AM UTC: 
 hashmap.c | 42 +++++++++++++++++++++++++++++++-----------
 1 file changed, 31 insertions(+), 11 deletions(-)
 tests:  11|2
total_score: 50/70
6910be0
Mon 29 Apr 2024 03:04:43 AM UTC: 
 hashmap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:157:1: error: control reaches end of non-void function [-Werror=return-type]
  157 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4044d66
Mon 29 Apr 2024 03:04:52 AM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  14|1
total_score: 60/70
07ed70f
Mon 29 Apr 2024 03:31:27 AM UTC: 
 hashmap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  17|0
total_score: 70/70
5d71ce3
Mon 29 Apr 2024 03:33:59 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
da3feb1
